@@ -120,6 +120,9 @@ simulation
    TrackManager class
       1) converted several local member function arrays to class member arrays.
 
+   Weapon class
+      1) added storage for target velocity data
+
 --------------------------------------------------------------------------------
 vehicle
 
